--- a/RestSharpSpecflow/RestSharpSpecflow.csproj
+++ b/RestSharpSpecflow/RestSharpSpecflow.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoFixture" Version="4.17.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
         <PackageReference Include="RestSharp" Version="108.0.2" />
         <PackageReference Include="SpecFlow.Assist.Dynamic" Version="1.4.2" />
